<resources>
    <string name="app_name">CobaKeluar</string>
    <string name="try_out">TRY OUT</string>
    <string name="selesai">SELESAI</string>
    <string name="numerasi">NUMERASI,</string>
    <string name="besok">BESOK</string>
    <string name="numerasi_without_coma">NUMERASI</string>
    <string name="geometri_pengukuran">Geometri pengukuran</string>
    <string name="history">HISTORY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="waktu">Waktu:</string>
    <string name="jawab">JAWAB</string>
    <string name="pembahasan">Pembahasan</string>
    <string name="cek_pembahasan">Cek pembahasan</string>
    <string name="countdown">Waktu tersisa: %1s</string>
    <string name="benar">BENAR %1d</string>
    <string name="salah">SALAH %1d</string>
    <string name="kosong">KOSONG %1d</string>
</resources>