<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="true"
    android:layout_marginTop="8dp"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.soal.MultipleChoiceQuestion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingVertical="16dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/shape_bg_white_rectangle_radius">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:text="Data dan ketidakpastian"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Data dan ketidakpastian" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/waktu"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="30 Detik"
                android:textColor="@color/purple"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5"
                tools:text="30 Detik"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/llQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="@drawable/shape_bg_white_rectangle_radius"
            android:layout_marginHorizontal="16dp">

            <io.github.kexanie.library.MathView
                android:id="@+id/formulaOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                auto:engine="MathJax" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            tools:listitem="@layout/answer_item"/>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/viewPager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPrev"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/button_radius_bg_yellow"
                android:textColor="@color/black"
                app:backgroundTint="@null"
                app:iconTint="@color/black"
                app:icon="@drawable/arrow_back_24_black"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnJawab"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:background="@drawable/button_radius_bg_yellow"
                android:text="@string/jawab"
                android:textSize="18sp"
                app:backgroundTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCekPembahasan"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="2"
                android:background="@drawable/button_radius_bg_yellow"
                android:textColor="@color/black"
                android:text="@string/cek_pembahasan"
                android:textSize="18sp"
                app:backgroundTint="@null"
                android:visibility="gone"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNext"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/button_radius_bg_yellow"
                android:textColor="@color/black"
                app:backgroundTint="@null"
                app:iconTint="@color/black"
                app:icon="@drawable/arrow_forward_24_black"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>